fast-api/fastapi-subgraph-federation/k8s/router-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: router-service
  namespace: graphql-federation
spec:
  type: ClusterIP
  selector:
    app: router
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
